# MqttMonitor

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROGRESS.md  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
docs/: 项目技术问答.md
src/bridge/: MqttBridge.cpp  MqttBridge.h
src/core/: CardRuleConfig.h  CardRuleStore.cpp  CardRuleStore.h  CmdPreset.h  CmdPresetStore.cpp  CmdPresetStore.h  ConfigStore.cpp  ConfigStore.h  DisconnectDetectionConfig.cpp  DisconnectDetectionConfig.h  MessageBuffer.cpp  MessageBuffer.h  MqttClient.cpp  MqttClient.h
src/ui/: AddDeviceDialog.cpp  AddDeviceDialog.h  CardRuleDialog.cpp  CardRuleDialog.h  ConfigPanel.cpp  ConfigPanel.h  ConfigPanel.ui  DeviceCard.cpp  DeviceCard.h  DeviceView.cpp  DeviceView.h  dark.qss
